tests/NormalTests/paczka1/fuzzy1/13116515.err
Error in line 1: HAfz8aE A794 47,9
Error in line 8: safUmgmLn S514 68,4
Error in line 13: HAfz8aE S353 188,8
Error in line 18: safUmgmLn A794 21,6
Error in line 20: HAfz8aE A747 53,6
Error in line 16: OAf S514 231,0
